feat: added dentish CRUD
